master: added border to portfolio items

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -529,7 +529,7 @@ section {
             box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
         }
         background-color: white;
-        // border-color: 10px white;
+        border: 3px solid white;
         transition: all .4s ease-in-out;
         position: relative;
         overflow:hidden;
